@@ -18,10 +18,14 @@ $Id$
 from App.class_init import InitializeClass
 from five.localsitemanager.registry import PersistentComponents
 from Products.Five.component.interfaces import IObjectManagerSite
-from zope.app.publication.zopepublication import BeforeTraverseEvent
 from zope.component.interfaces import ComponentLookupError
 from zope.event import notify
 from zope.interface import implements
+try:
+    from zope.traversing.interfaces import BeforeTraverseEvent
+except ImportError:
+    # BBB: for Zope < 2.13
+    from zope.app.publication.zopepublication import BeforeTraverseEvent
 
 from Products.CMFCore.interfaces import ISiteRoot
 from Products.CMFCore.permissions import AddPortalMember
