@@ -3,6 +3,8 @@
 
   <include package="five.localsitemanager" />
 
+  <include file="permissions.zcml"/>
+
   <include package=".browser"/>
 
   <include package=".exportimport"/>
