@@ -1,0 +1,91 @@
+<configure xmlns="http://namespaces.zope.org/zope"
+           xmlns:zcml="http://namespaces.zope.org/zcml"
+           i18n_domain="cmf_default">
+
+  <!-- CMF Core Permissions -->
+
+  <configure zcml:condition="installed AccessControl.security">
+
+    <permission
+      id="cmf.ListFolderContents"
+      title="List folder contents"
+      />
+
+    <permission
+      id="cmf.ListUndoableChanges"
+      title="List undoable changes"
+      />
+
+    <permission
+      id="cmf.AccessInactivePortalContent"
+      title="Access inactive portal content"
+      />
+
+    <permission
+      id="cmf.ManagePortal"
+      title="Manage portal"
+      />
+
+    <permission
+      id="cmf.ModifyPortalContent"
+      title="Modify portal content"
+      />
+
+    <permission
+      id="cmf.ManageProperties"
+      title="Manage properties"
+      />
+
+    <permission
+      id="cmf.ListPortalMembers"
+      title="List portal members"
+      />
+
+    <permission
+      id="cmf.AddPortalFolders"
+      title="Add portal folders"
+      />
+
+    <permission
+      id="cmf.AddPortalContent"
+      title="Add portal content"
+      />
+
+    <permission
+      id="cmf.AddPortalMember"
+      title="Add portal member"
+      />
+
+    <permission
+      id="cmf.SetOwnPassword"
+      title="Set own password"
+      />
+
+    <permission
+      id="cmf.SetOwnProperties"
+      title="Set own properties"
+      />
+
+    <permission
+      id="cmf.MailForgottonPassword"
+      title="Mail forgotten password"
+      />
+
+    <permission
+      id="cmf.RequestReview"
+      title="Request review"
+      />
+
+    <permission
+      id="cmf.ReviewPortalContent"
+      title="Review portal content"
+      />
+
+    <permission
+      id="cmf.AccessFuturePortalContent"
+      title="Access future portal content"
+      />
+
+  </configure>
+
+</configure>
