@@ -100,10 +100,14 @@ class EventZCMLLayer(ZopeLite):
 
     @classmethod
     def testSetUp(cls):
+        import OFS
         import Products
 
         zcml.load_config('meta.zcml', Products.Five)
-        zcml.load_config('event.zcml', Products.Five)
+        try:
+            zcml.load_config('event.zcml', OFS)
+        except IOError:  # Zope <= 2.12.x
+            zcml.load_config('event.zcml', Products.Five)
         zcml.load_config('event.zcml', Products.CMFCore)
         setHooks()
 
@@ -205,16 +209,30 @@ class ExportImportZCMLLayer(ZopeLite):
 
     @classmethod
     def testSetUp(cls):
+        import Zope2.App
+        import AccessControl
         import Products.Five
         import Products.GenericSetup
         import Products.CMFCore
         import Products.CMFCore.exportimport
 
+        try:
+            zcml.load_config('meta.zcml', Zope2.App)
+        except IOError:  # Zope <= 2.12.x
+            pass
+
         zcml.load_config('meta.zcml', Products.Five)
-        zcml.load_config('meta.zcml', Products.GenericSetup)
+
+        try:
+            zcml.load_config('permissions.zcml', AccessControl)
+        except IOError:  # Zope <= 2.12.x
+            pass
+
         zcml.load_config('permissions.zcml', Products.Five)
+
         zcml.load_config('meta.zcml', Products.GenericSetup)
         zcml.load_config('configure.zcml', Products.GenericSetup)
+        zcml.load_config('permissions.zcml', Products.CMFCore)
         zcml.load_config('tool.zcml', Products.CMFCore)
         zcml.load_config('configure.zcml', Products.CMFCore.exportimport)
         zcml.load_string(_DUMMY_ZCML)
