@@ -2,6 +2,8 @@
     xmlns="http://namespaces.zope.org/zope"
     xmlns:five="http://namespaces.zope.org/five">
 
+  <include file="permissions.zcml"/>
+
   <five:registerClass
       class=".ActionInformation.ActionCategory"
       meta_type="CMF Action Category"
